--- a/styles/editbox.module.css
+++ b/styles/editbox.module.css
@@ -44,3 +44,30 @@
   justify-content: center;
   align-items: center;
 }
+.form_submit_btn {
+  background-color: #fec300;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  font-size: medium;
+}
+.form_cancel_btn {
+  background-color: grey;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  color: #fff;
+  font-size: medium;
+}
+
+.form_submit_btn:hover {
+  cursor: pointer;
+  background-color: #ecb500;
+}
+
+.form_cancel_btn:hover {
+  cursor: pointer;
+  background-color: rgb(83, 83, 83);
+}
